# carnelian

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  CI_COMPREHENSIVE_REVIEW.md  CI_FIXES_STATUS.md  CI_OPTIMIZATION.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_STATUS_AND_ANALYSIS.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  FUTURE_PQC.md  LICENSE  LICENSE.md  LICENSE_OPENCLAW_DISCLAIMER.md  LOCAL_LAUNCH_GUIDE.md  MACHINE_PROFILES.md  Makefile  README.md  RELEASE_NOTES.md  REPO_ORGANIZATION.md  SECURITY.md  SESSION_SUMMARY.md  SKILL_ORGANIZATION_STATUS.md  TESTING.md  clippy.toml  clippy_errors.txt  docker-compose.monitoring.yml  docker-compose.performance.yml  docker-compose.standard.yml  docker-compose.thummim.yml  docker-compose.urim.yml  docker-compose.yml  machine.toml.example  (+3 more)
crates/carnelian-adapters/: Cargo.toml  README.md
crates/carnelian-adapters/src/: config.rs  db.rs  factory.rs  lib.rs  rate_limiter.rs  spam_detector.rs  testing.rs  types.rs
crates/carnelian-adapters/src/discord/: commands.rs  handlers.rs  mod.rs  pairing.rs
crates/carnelian-adapters/src/slack/: commands.rs  handlers.rs  mod.rs  pairing.rs
crates/carnelian-adapters/src/telegram/: commands.rs  handlers.rs  mod.rs  pairing.rs
crates/carnelian-adapters/src/whatsapp/: commands.rs  handlers.rs  mod.rs  pairing.rs
crates/carnelian-bin/: Cargo.toml
crates/carnelian-bin/src/: main.rs
crates/carnelian-common/: Cargo.toml
crates/carnelian-common/src/: channel.rs  error.rs  lib.rs  types.rs
crates/carnelian-core/: Cargo.toml
crates/carnelian-core/.sqlx/: README.md
crates/carnelian-core/src/: agentic.rs  approvals.rs  attestation.rs  chain_anchor.rs  config.rs  config_tests_magic.rs  context.rs  context_analyzer.rs  crypto.rs  db.rs  elixir.rs  encryption.rs  events.rs  ledger.rs  lib.rs  memory.rs  metrics.rs  model_router.rs  policy.rs  safe_mode.rs  scheduler.rs  secrets.rs  server.rs  server.rs.magic_handlers  session.rs  skill_book.rs  skills.rs  soul.rs  sub_agent.rs  voice.rs  worker.rs  workflow.rs  xp.rs
crates/carnelian-core/src/middleware/: cors.rs  input_validation.rs  mod.rs  rate_limit.rs  security_headers.rs
crates/carnelian-core/src/providers/: anthropic.rs  fireworks.rs  mod.rs  ollama.rs  openai.rs
crates/carnelian-core/src/skills/: native_loader.rs  sandbox.rs  skill_trait.rs  wasm_runtime.rs
crates/carnelian-core/tests/: README.md  approval_api_tests.rs  attestation_tests.rs  capability_api_tests.rs  checkpoint1_validation_test.rs  checkpoint2_validation_test.rs  checkpoint3_validation_test.rs  cli_integration_test.rs  config_tests.rs  context_integration.rs  context_integrity_test.rs  encryption_tests.rs  execution_validation_test.rs  foundation_validation_test.rs  init_integration_test.rs  integration_context_analyzer.rs  integration_test.rs  intelligence_integration_test.rs  logging_test.rs  memory_integration.rs  migration_test.rs  native_ops_tests.rs  phase3_integration_test.rs  production_validation_test.rs  safe_mode_integration_test.rs  scheduler_integration_test.rs  server_integration_test.rs  session_integration.rs  skill_discovery_tests.rs  sub_agent_integration.rs  sub_agent_tests.rs  wasm_skill_tests.rs  worker_transport_tests.rs  workspace_scan_test.rs
crates/carnelian-core/tests/common/: mod.rs
crates/carnelian-core/tests/fixtures/: machine.toml  mock_worker.js  test_key.pem
crates/carnelian-core/tests/fixtures/souls/: test.md  test_lian.md  test_minimal.md
crates/carnelian-magic/: Cargo.toml
crates/carnelian-magic/src/: batch_verify.rs  entropy.rs  entropy_arc_impl.rs  error.rs  hasher.rs  lib.rs  mantra.rs  merkle.rs  pqc.rs  verifier.rs
crates/carnelian-magic/tests/: integration_pqc.rs
crates/carnelian-ui/: Cargo.toml
crates/carnelian-ui/src/: api.rs  main.rs  store.rs  theme.rs  websocket.rs
crates/carnelian-ui/src/components/: first_run_wizard.rs  mod.rs  system_tray.rs  tab_nav.rs  toast.rs  top_bar.rs  voice_settings.rs  xp_widget.rs
crates/carnelian-ui/src/pages/: approvals.rs  capabilities.rs  channels.rs  dashboard.rs  elixirs.rs  events.rs  heartbeat.rs  identity.rs  ledger.rs  magic.rs  mod.rs  providers.rs  settings.rs  skill_book.rs  skills.rs  sub_agents.rs  tasks.rs  workflows.rs  xp_progression.rs
crates/carnelian-ui/src/theme/: glass.css
crates/carnelian-worker-native/: Cargo.toml
crates/carnelian-worker-native/src/: lib.rs
crates/carnelian-worker-python/: Cargo.toml
crates/carnelian-worker-python/src/: lib.rs
crates/carnelian-worker-shell/: Cargo.toml
crates/carnelian-worker-shell/src/: lib.rs
docs/: API.md  (+50 more)
skills/core-registry/gzip-compress/: Cargo.toml  gzip-compress.wasm
skills/core-registry/gzip-compress/src/: main.rs
skills/core-registry/math-calculate/: Cargo.toml  skill.json
skills/core-registry/math-calculate/src/: main.rs
skills/core-registry/number-random/: Cargo.toml  number-random.wasm
skills/core-registry/number-random/src/: main.rs
skills/core-registry/qr-generate/: Cargo.toml
skills/core-registry/text-truncate/: Cargo.toml  text-truncate.wasm
skills/registry/base64-encode/: Cargo.toml
skills/registry/base64-encode/src/: main.rs
skills/registry/crypto-encrypt/: Cargo.toml  skill.json
skills/registry/crypto-hash/: Cargo.toml
skills/registry/crypto-keygen/: Cargo.toml
skills/registry/crypto-keygen/src/: main.rs
skills/registry/crypto-sign/: Cargo.toml  skill.json
skills/registry/crypto-sign/src/: main.rs
skills/registry/datetime-format/: Cargo.toml  datetime-format.wasm  skill.json
skills/registry/datetime-format/src/: main.rs
skills/registry/email-validate/: Cargo.toml
skills/registry/email-validate/src/: main.rs
skills/registry/file-checksum/: Cargo.toml
skills/registry/hash-sha256/: Cargo.toml  hash-sha256.wasm
skills/registry/json-validate/: Cargo.toml
skills/registry/string-reverse/: Cargo.toml  skill.json  string-reverse.wasm
skills/registry/string-reverse/src/: lib.rs  main.rs
skills/registry/uuid-generate/: Cargo.toml  skill.json
(+1309 files in other folders)
