[package]
name = "carnelian-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "carnelian"
path = "src/main.rs"
doc = false

[dependencies]
carnelian-core = { path = "../carnelian-core" }
carnelian-adapters = { path = "../carnelian-adapters" }
carnelian-common = { path = "../carnelian-common" }
carnelian-magic = { path = "../carnelian-magic" }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Logging & tracing
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# UUID
uuid = { workspace = true }

# Docker API client
bollard = { workspace = true }

# System information
sysinfo = { workspace = true }

# Database
sqlx = { workspace = true }

# Configuration
dotenvy = { workspace = true }

# Web framework
axum = { workspace = true }
tower-http = { workspace = true }

# File system utilities
walkdir = { workspace = true }

# Time utilities
chrono = { workspace = true }

# Encoding
hex = { workspace = true }
base64 = { workspace = true }

# System utilities
which = { workspace = true }
libc = { workspace = true }

[lints]
workspace = true
