[package]
name = "carnelian-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
carnelian-common = { path = "../carnelian-common" }
tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
blake3.workspace = true
hex.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
http.workspace = true
clap.workspace = true
config.workspace = true
dotenvy.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
globset.workspace = true
pgvector.workspace = true
rand = "0.8"

[[bin]]
name = "carnelian"
path = "src/bin/carnelian.rs"

[dev-dependencies]
testcontainers.workspace = true
tokio-test.workspace = true

[lints]
workspace = true
