[package]
name = "carnelian-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
carnelian-common = { path = "../carnelian-common" }
tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
uuid.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
blake3.workspace = true
hex.workspace = true
reqwest.workspace = true
bytes.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
http.workspace = true
clap.workspace = true
config.workspace = true
dotenvy.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
globset.workspace = true
pgvector.workspace = true
async-trait.workspace = true
tiktoken-rs.workspace = true
tokio-util.workspace = true
rand = "0.8"
ciborium = "0.2"
base64 = "0.22"
which = "6.0"
walkdir = { workspace = true }
bollard = { workspace = true }
sysinfo = { workspace = true }
async-stream = "0.3"
libloading = "0.8"
wasmtime = "27.0"
wasmtime-wasi = "27.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
testcontainers.workspace = true
tokio-test.workspace = true
memory-stats.workspace = true
tempfile = "3.14"
criterion = { version = "0.5", features = ["async_tokio"] }
mockall = "0.12"
wiremock = "0.6"
cargo-tarpaulin = "0.28"

[[bench]]
name = "memory_benchmarks"
harness = false

[[bench]]
name = "skill_benchmarks"
harness = false

[lints]
workspace = true
