[package]
name = "math-calculate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "math-calculate"
path = "src/main.rs"

[dependencies]
meval = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
