[package]
name = "number-random"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "number-random"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
