[package]
name = "qr-generate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qr-generate"
path = "src/main.rs"

[dependencies]
qrcode = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
