[package]
name = "text-truncate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "text-truncate"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.12"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
