[package]
name = "base64-encode"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "base64-encode"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
