[package]
name = "crypto-encrypt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crypto-encrypt"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
rand = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
