[package]
name = "crypto-keygen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crypto-keygen"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
rand = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
