[package]
name = "crypto-sign"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crypto-sign"
path = "src/main.rs"

[dependencies]
ed25519-dalek = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
