[package]
name = "datetime-format"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "datetime-format"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
