[package]
name = "hash-sha256"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hash-sha256"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
