[package]
name = "json-validate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "json-validate"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.17"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
