[package]
name = "uuid-generate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uuid-generate"
path = "src/main.rs"

[dependencies]
uuid = { version = "1.11", features = ["v4", "fast-rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
